<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancel_button" />

    <EditText
        android:id="@+id/EditTitle"
        android:layout_width="236dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintTop_toBottomOf="@id/image_preview" />

    <EditText
        android:id="@+id/EditDesc"
        android:layout_width="236dp"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintTop_toBottomOf="@id/EditTitle" />

    <EditText
        android:id="@+id/EditTags"
        android:layout_width="236dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:hint="@string/tags"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintTop_toBottomOf="@id/EditDesc"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/submit"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintRight_toRightOf="@id/image_preview"
        app:layout_constraintTop_toBottomOf="@id/EditTags" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/cancel_image_add"
        app:layout_constraintRight_toRightOf="@id/image_preview"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel_pink_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>