<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancel_button" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="date"
        android:hint="@string/select_date"
        app:layout_constraintTop_toBottomOf="@id/image_preview"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintRight_toRightOf="@id/image_preview"/>

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="time"
        android:hint="@string/select_time"
        app:layout_constraintTop_toBottomOf="@id/edit_date"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintRight_toRightOf="@id/image_preview"/>

    <Button
        android:id="@+id/loc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/edit_time"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintRight_toRightOf="@id/image_preview"/>

    <Button
        android:id="@+id/auto_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/auto_fill"
        app:layout_constraintLeft_toLeftOf="@id/image_preview"
        app:layout_constraintTop_toBottomOf="@id/loc_button"
        app:layout_constraintRight_toLeftOf="@id/next_button"/>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/next_screen_button"
        app:layout_constraintLeft_toRightOf="@id/auto_button"
        app:layout_constraintTop_toTopOf="@id/auto_button"
        app:layout_constraintRight_toRightOf="@id/image_preview"
        app:srcCompat="@drawable/ic_arrow_forward_200_24dp"/>

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/cancel_image_add"
        app:layout_constraintRight_toRightOf="@id/image_preview"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel_pink_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>