<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/permissions_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:text="@string/permissions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/permission_divider"
            android:layout_width="376dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/permissions_title"
            />

        <Switch
            android:id="@+id/camera_perm_switch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/camera"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/permission_divider"
            />

        <Switch
            android:id="@+id/location_perm_switch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:text="@string/location"
            app:layout_constraintTop_toBottomOf="@id/camera_perm_switch"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Switch
            android:id="@+id/gallery_perm_switch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:text="@string/gallery_access"
            app:layout_constraintTop_toBottomOf="@id/location_perm_switch"
            app:layout_constraintLeft_toLeftOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>