<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:screenOrientation="landscape"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ImageView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:keepScreenOn="true"
        android:contentDescription="@string/image_desc"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/fav_button_fullsc"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/fav_button_off"
                android:src="@drawable/ic_favorite_border_white_50percent"
                />

            <ImageButton
                android:id="@+id/exit_fullscreen_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/exit_fullscreen"
                android:src="@drawable/ic_navigation_fullscreen_exit" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>